--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -1,36 +1,41 @@
 {
+  "update_url": "http://clients2.google.com/service/update2/crx",
+  "name": "YSlow",
+  "version": "3.1.2",
+  "manifest_version": 2,
+  "content_security_policy": "script-src 'self'; object-src 'self'",
+  "background": {
+    "page": "background.html",
+    "persistent": true
+  },
+  "description": "Make your pages faster with Yahoo!'s page performance tool",
+  "icons": {
+    "128": "128.png",
+    "16": "16.png",
+    "32": "32.png",
+    "48": "48.png"
+  },
+  "browser_action": {
     "name": "YSlow",
-    "version": "{{YSLOW_VERSION}}",
-    "description": "YSlow analyzes web pages and suggests ways to improve their performance based on a set of rules for high performance web pages.",
-    "icons": {
-        "128": "128.png",
-        "16": "16.png",
-        "32": "32.png",
-        "48": "48.png"
-    },
-    "browser_action": {
-        "name": "YSlow",
-        "default_icon": {
-            "19": "icon38x19.png",
-            "38": "icon38x19@2x.png"
-        },
-    },
-    "background_page": "background.html",
-    "options_page": "options.html",
-    "content_scripts": [{
-        "matches": [
-            "http://*/*",
-            "https://*/*"
-        ],
-        "js": [
-            "content.js",
-            "yslow-chrome.js"
-        ]
-    }],
-    "permissions": [
-        "tabs",
-        "cookies",
+    "default_icon": "icon.png"
+  },
+  "options_page": "options.html",
+  "content_scripts": [
+    {
+      "matches": [
         "http://*/*",
         "https://*/*"
-    ]
+      ],
+      "js": [
+        "content.js",
+        "yslow-chrome.js"
+      ]
+    }
+  ],
+  "permissions": [
+    "tabs",
+    "cookies",
+    "http://*/*",
+    "https://*/*"
+  ]
 }
